# zorivest

./: .antigravityignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  GEMINI.md  GUARDRAILS.md  SOUL.md  openapi.committed.json  pyproject.toml  validate.ps1
.codex/: config.toml
.gemini/: settings.json
_inspiration/: API_INTEGRATION_RESEARCH.md  APPLICATION_PURPOSE.md  BUILD_PLAN_CRITICAL_FEEDBACK.md  BUILD_PLAN_GPT53CODEX_FEEDBACK.md  BUILD_PLAN_VALIDATION.md  CALC-GUI-MCP_GPT53CODEX_FEEDBACK.md  CALC_GPT53CODEX_FEEDBACK.md  DESIGN_PROPOSAL.md  FLOWS_GPT53CODEX_FEEDBACK.md  Hybrid App Release Pipeline Architecture.md  INPUT_INDEX_CRITICAL_FEEDBACK.md  TRADER_READINESS_PROTOCOL.md  Trader Tax Estimating Tools Features.md  _RELEASE_PROCESS.md  _SCHEDULER_EMAIL_SERVICE_RESEARCH.md  _backup-restore-architecture.md  _gui-settings-architecture.md  _logging-architecture.md  _market_tools_api-architecture.md  _market_tools_architecture.md  _mcp-architecture.md  _mcp-manager-architecture.md  _notes-architecture.md  _position-calculator-features.md  _position-calculator-gui-mcp.md  _security-architecture.md  _settings-architecture.md  _tjs_inspired_features.md  _todo_considerations.txt  _tradelogger_architecture.md  _traderlogger_logic.md  _versioning-release-architecture.md  deep-research-prompts-dual-agent.md  derived-data-architecture-research.md  excel_analysis.txt  output-claude.md  output-gpt.md  style-guide.md
docs/: AI_IMPROVEMENT_DIVIDEND.md  BUILD_PLAN.md  DESIGN_PROPOSAL.md  _RELEASE_PROCESS.md  _SCHEDULER_EMAIL_SERVICE_RESEARCH.md  _backup-restore-architecture.md  _market_tools_api-architecture.md  _security-architecture.md  _todo_considerations.txt  agentic-coding-research.md
mcp-server/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  zorivest-tools.json
poc/: key_vault.py  poc_envelope_encryption.py
tests/: conftest.py
tools/: __init__.py  aggregate_reflections.py  export_openapi.py  fuzz_api.py  (+4 more)
(+1605 files in other folders)
