[project]
name = "zorivest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "zorivest-api",
    "zorivest-core",
    "zorivest-infra",
]

[tool.uv.sources]
zorivest-api = { workspace = true }
zorivest-core = { workspace = true }
zorivest-infra = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests",
    "integration: Integration tests with real DB",
    "e2e: End-to-end tests",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
